# fb-profile-analyzer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
extension/: analyzer.js  collector.js  content.js  gender.js  manifest.json  overlay.css  popup.html  popup.js  scraper.js
frontend/: index.html
src/analyzer/: __init__.py  api.py  engine.py  models.py  scorer.py  signals.py
tests/: test_api.py  test_engine.py  test_scorer.py  test_signals.py
