[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fb-profile-analyzer"
version = "1.0.0"
description = "Facebook Profile Authenticity Analyzer — 9-signal weighted scoring engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "pydantic>=2.9.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-cov>=5.0,<8.0",
    "pytest-asyncio>=0.24,<2.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.6,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101"]
